--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>https://beritatoday.github.io/news/</title>
 </head>
 <body>
-    <h1>BERITA TODAY NEWS</h1>
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, blanditiis iste voluptatum accusantium quidem id maiores ab magni eos iusto officiis commodi temporibus eaque a tenetur quos architecto, necessitatibus aliquam?</P>
-    <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nobis facere ipsam accusamus earum, aut molestias omnis fuga, vel esse, temporibus atque hic autem? Id similique consequuntur vero eius reiciendis!</P>
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium possimus eius, sed suscipit veniam quis consequatur praesentium voluptas ut blanditiis temporibus minima itaque consectetur vel consequuntur magnam reiciendis alias quibusdam.</P>
+    <h1>WELCOME TO BERITA TODAY BY her her her</h1>
 </body>
 </html>
