--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>https://beritatoday.github.io/news/</title>
+    <script async type="application/javascript"
+        src="https://news.google.com/swg/js/v1/swg-basic.js"></script>
+<script>
+  (self.SWG_BASIC = self.SWG_BASIC || []).push( basicSubscriptions => {
+    basicSubscriptions.init({
+      type: "NewsArticle",
+      isPartOfType: ["Product"],
+      isPartOfProductId: "CAowvKm1DA:openaccess",
+      clientOptions: { theme: "light", lang: "id" },
+    });
+  });
+</script>
 </head>
 <body>
     <h1>WELCOME TO BERITA TODAY BY her her her</h1>
